# FuturistProject

./: .env.example  README.md  docker-compose.yml  dockerfile  makefile  pyproject.toml
migrations/: env.py
migrations/versions/: 0601e8977d54_create_readonly_user_role.py  c95f7799a9e1_init_models.py
src/: container.py  json2database_runner.py  main.py
src/bot/: handlers.py
src/core/: settings.py
src/database/: manager.py
src/database/models/: __init__.py  base.py  video_snapshots.py  videos.py
src/llm_service/: text_to_sql.py
src/llm_service/prompts/: on_error.md  on_start.md
src/scripts/: json_to_database.py
